fixed the overflow problem in the footer and when 'Cart' modal is open it disables the scroll-bar

--- a/src/Components/Cart/Cart.module.css
+++ b/src/Components/Cart/Cart.module.css
@@ -44,14 +44,13 @@
 
 /* cartFooter */
 .cartFooter{
+    box-sizing: border-box;
     display: flex;
     justify-content: space-between;
     position: absolute;
-    right: 0;
     bottom: 0;
-    width: 94%;
-    overflow: none;
-    padding: 15px;
+    width: 481px;
+    padding: 10px;
     border-top: 1px solid rgba(0, 0, 0, 0.233);
 }
 
